@@ -2,6 +2,7 @@
 	- Reduce the memory usage of the RRset class.
 	- Add a new factory method for creating a Record from a
 	  String, rather than a pre-tokenized String.
+	- Reduce the memory usage of the ARecord class.
 
 4/23/2002
 	- Fix potential race conditions in the RRset class.
